--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,15 @@ dependencies:
   intl_phone_number_input: ^0.7.0+2
   dio: ^4.0.1
   image_picker: ^0.8.4+1
-
+  fluttertoast: ^8.0.8
+  flutter_spinkit: ^5.1.0
+  status_alert: ^1.0.0-nullsafety.1
+  share: ^2.0.4
+  webview_flutter_plus: ^0.2.3
+  video_player: ^2.2.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
