--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://artifactory.paytm.in/libs-release-local"
+        }
     }
 
     dependencies {
