--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -43,6 +43,14 @@ dependencies:
   share: ^2.0.4
   webview_flutter_plus: ^0.2.3
   video_player: ^2.2.3
+  bubble: ^1.2.1
+  syncfusion_flutter_sliders: ^19.3.57
+  url_launcher: ^6.0.17
+  paytm_allinonesdk: ^1.1.4
+  paytm: ^3.0.1
+  geolocator: ^8.0.1
+  geocoding: ^2.0.1
+  razorpay_plugin: ^0.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -61,6 +69,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - Images/
+    - Images/Icons/
     #   - images/a_dot_ham.jpeg
 
     # An image asset can refer to one or more resolution-specific "variants", see
@@ -78,6 +88,8 @@ flutter:
     - family: Schyler
       fonts:
         - asset: assets/fonts/segoebold.ttf
+
+
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
