--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,7 +35,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.immigration.immigration"
+        applicationId "com.immigration.usertest"
         minSdkVersion 20
         targetSdkVersion 31
         multiDexEnabled true
