--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   geolocator: ^8.0.1
   geocoding: ^2.0.1
   razorpay_flutter: ^1.2.7
+  cloud_firestore: ^3.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
