--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   geocoding: ^2.0.1
   razorpay_flutter: ^1.2.7
   cloud_firestore: ^3.1.5
+  firebase_storage: ^10.2.4
+  intl: ^0.17.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
