--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,11 +53,10 @@ dependencies:
   razorpay_flutter: ^1.2.7
   cloud_firestore: ^3.1.5
   firebase_storage: ^10.2.4
-<<<<<<< HEAD
-=======
   intl: ^0.17.0
+  search: ^0.3.0
+  multi_select_flutter: ^4.0.0
   
->>>>>>> 122971c78d436a47f32a72f64e06ea64d8746d13
 dev_dependencies:
   flutter_test:
     sdk: flutter
