--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,9 +54,14 @@ dependencies:
   cloud_firestore: ^3.1.5
   firebase_storage: ^10.2.4
   intl: ^0.17.0
-  search: ^0.3.0
   multi_select_flutter: ^4.0.0
-  
+  youtube_player_iframe: ^2.2.2
+  flutter_firebase_chat_core: ^1.5.1
+  flutter_chat_ui: ^1.1.8
+  photo_view: ^0.12.0
+  file_picker: ^4.2.8
+  open_file: ^3.2.1
+  mime: ^1.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
