--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   file_picker: ^4.2.8
   open_file: ^3.2.1
   mime: ^1.0.1
+  multi_image_picker2: ^5.0.02
 dev_dependencies:
   flutter_test:
     sdk: flutter
