multi image done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ dependencies:
   open_file: ^3.2.1
   mime: ^1.0.1
   multi_image_picker2: ^5.0.02
+  youtube_player_flutter: ^8.0.0
+  flutter_absolute_path:
+    git:
+      url: https://github.com/canewsin/flutter_absolute_path.git
 dev_dependencies:
   flutter_test:
     sdk: flutter
